# libreidp

./: .clang-format  .clang-tidy  .emacs  Cargo.toml  LICENSE  README.md  REQUIREMENTS.md  meson.build
libreidp/: meson.build
libreidp-runtime/: meson.build
libreidp-runtime/include/libreidp/: http-handler.h  interfaces.h  libreidp.h  plugin.h  vector.h
libreidp-runtime/include/libreidp/core/: http.h
libreidp-runtime/include/libreidp/interfaces/: http.h
libreidp-runtime/include/libreidp/priv/core/: http.h
libreidp-runtime/source/: interfaces.c  plugin.c  vector.c
libreidp-runtime/source/core/: http.c
libreidp/include/: idp-config.h  plugin-loader.h  plugin-resolver.h
libreidp/source/: main.c  plugin-loader.c  plugin-resolver.c
libreidp/source/core-impl/: http.c
plugins/: meson.build
plugins/dummy/: dummy.c  meson.build
plugins/oauth2/: meson.build  oauth2.c
src/: cache.rs  configuration.rs  frontend.rs  main.rs
src/cache/: redis.rs
src/frontend/: http.rs
